@@ -87,7 +87,7 @@ var lmsBrowse = Vue.component("lms-browse", {
  <div class="lms-list bgnd-cover" id="browse-bgnd">
   <div class="noselect lms-jumplist" v-bind:class="{'bgnd-blur':drawBgndImage}" v-if="filteredJumplist.length>1">
    <template v-for="(item, index) in filteredJumplist">
-    <div @click="jumpTo(item.index)" v-bind:class="{'active-btn' : jumplistActive==index}">{{jumplistActive!=index && item.alt ? item.alt : (item.key==' ' || item.key=='' ? '?' : item.key)}}</div>
+    <div @click="jumpTo(item.index)" v-bind:class="{'active-btn' : jumplistActive==index}">{{item.key==' ' || item.key=='' ? '?' : item.key}}</div>
    </template>
   </div>
   <div class="lms-list" id="browse-list" style="overflow:auto;" v-bind:class="{'lms-image-grid': grid.use, 'lms-image-grid-jump':grid.use && filteredJumplist.length>1, 'lms-list-jump':!grid.use && filteredJumplist.length>1,'bgnd-blur':drawBgndImage}">
@@ -1313,14 +1313,14 @@ var lmsBrowse = Vue.component("lms-browse", {
             if (this.items.length<=25) {
                 return;
             }
-            if (IS_MOBILE && (undefined==this.jumplist || this.jumplist.length<1)) {
+            if ((undefined==this.jumplist || this.jumplist.length<1)) {
                 if (this.items.length <= (this.grid.allowed ? 50 : 150)) {
                     return;
                 }
                 this.jumplist = [];
                 var jump = this.items.length/10.0;
                 for (var i=0; i<10; ++i) {
-                    this.jumplist.push({key:'\u25cf', alt:'\u2022', index: Math.round(i*jump)});
+                    this.jumplist.push({key:'\u2022', index: Math.round(i*jump)});
                 }
             }
             if (undefined==this.jumplist || this.jumplist.length<1) {
